infra/k8s/frontend-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  labels:
    app: frontend
  namespace: devops-project

spec:
  replicas: 1

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: frontend

    spec:
      automountServiceAccountToken: false

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: frontend
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          image: me-central1-docker.pkg.dev/devops-gke-project-510307/devops-repo/devops-frontend:f26af883add63ac3bd4de01e391c62481cc53a49
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true

            - name: nginx-tmp
              mountPath: /tmp

          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"

            limits:
              cpu: "150m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config  
        
        - name: nginx-tmp
          emptyDir: {}
