infra/k8s/frontend-manifests/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  labels:
    app: frontend

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
