infra/k8s/frontend-manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: devops-gateway
  namespace: devops-project

spec:
  gatewayClassName: gke-l7-global-external-managed

  listeners:
    - name: http
      protocol: HTTP
      port: 80
