infra/k8s/frontend-manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: frontend-route
  namespace: devops-project

spec:
  parentRefs:
    - name: devops-gateway
      namespace: devops-project

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend
          port: 80
